5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1595_2895.log
== SUBMITION (2019-03-26 16:49:27) 
-- CODE:
var=float(input("qual a quantidade de jogos a serem comprados?"))
var= float(input("qual o valor unitario de cada jogo?"))
var= float(input("qual o valor do frete?"))
print(total)
-- EXECUTION TIME:
0.173679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:52:05) 
-- CODE:
var1=float(input("qual a quantidade de jogos a serem comprados?"))
var2=float(input("qual o valor unitario de cada jogo?"))
var3=float(input("qual o valor do frete?"))
total=(var2*var1)+var3
print(total)

-- EXECUTION TIME:
0.193528
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
